--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- الشعار -->
         <div class="logo">
-            <img src="https://i.ibb.co/9HF91tVc/1000017978.png" alt="MCash Logo">
+            <img src="https://i.ibb.co/NgjqbwFq/1000017959.png" alt="MCash Logo">
         </div>
 
         <!-- قسم الشراء/البيع -->
@@ -46,7 +46,7 @@
                 <input type="text" id="client-name" placeholder="الاسم" required>
                 <input type="text" id="wallet-address" placeholder="عنوان محفظة USDT" required>
                 <input type="file" id="proof" accept="image/*,.pdf" required>
-                <button type="submit" onclick="submitOrder()">تأكيد الدفع</button>
+                <button type="submit">تأكيد الدفع</button>
             </form>
         </div>
 
