--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
         <!-- الشعار -->
         <div class="logo">
-            <img src="https://i.ibb.co/NgjqbwFq/1000017959.png" alt="شعار تيتو كاش">
+            <img src="https://i.ibb.co/rK9fDQKY/1000018023-removebg-preview.png" alt="شعار تيتو كاش">
         </div>
 
         <!-- قسم الشراء/البيع -->
