--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button class="toggle-btn" onclick="setMode('sell')">بيع USDT</button>
             </div>
             <div class="calculator">
-                <input type="number" id="amount" placeholder="أدخل الكمية (USDT أو جنيه)" oninput="calculate()">
+                <input type="number" id="amount" placeholder="أدخل الكمية (USDT)" oninput="calculate()">
                 <div class="result-box">
                     <p>المبلغ الإجمالي</p>
                     <span id="result">0</span>
