--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Tags -->
     <meta property="og:title" content="تيتو كاش: شراء وبيع البيتكوين وتيثر دولار في مصر">
     <meta property="og:description" content="منصة تيتو كاش لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية بسهولة وأمان في مصر. استبدل عملاتك الآن بأفضل الأسعار!">
-    <meta property="og:image" content="https://i.ibb.co/NgjqbwFq/1000017959.png">
+    <meta property="og:image" content="https://i.ibb.co/x85b221r/1000018025-removebg-preview.png">
     <meta property="og:url" content="https://t2digital.github.io/MCash/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="T2 Cash">
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="تيتو كاش: شراء وبيع البيتكوين وتيثر دولار في مصر">
     <meta name="twitter:description" content="منصة تيتو كاش لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية بسهولة وأمان في مصر.">
-    <meta name="twitter:image" content="https://i.ibb.co/NgjqbwFq/1000017959.png">
+    <meta name="twitter:image" content="https://i.ibb.co/x85b221r/1000018025-removebg-preview.png">
 
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
                 <button class="toggle-btn" onclick="setMode('sell')">بيع USDT</button>
             </div>
             <div class="calculator">
-                <input type="number" id="amount" placeholder="أدخل الكمية (USDT)" oninput="calculate()">
+                <input type="number" id="amount" placeholder="أدخل الكمية (USDT أو جنيه)" oninput="calculate()">
                 <div class="result-box">
                     <p>المبلغ الإجمالي</p>
                     <span id="result">0</span>
