--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="تيتو كاش: شراء وبيع البيتكوين وتيثر دولار في مصر">
     <meta property="og:description" content="منصة تيتو كاش لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية بسهولة وأمان في مصر. استبدل عملاتك الآن بأفضل الأسعار!">
     <meta property="og:image" content="https://i.ibb.co/x85b221r/1000018025-removebg-preview.png">
-    <meta property="og:url" content="https://t2digital.github.io/MCash/">
+    <meta property="og:url" content="https://t2digital.github.io/T2Cash/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="T2 Cash">
 
