--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تيتو كاش: شراء وبيع البيتكوين وتيثر دولار رقمي في مصر</title>
     <meta name="description" content="تيتو كاش - منصتك الأولى لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية في مصر بأمان وسرعة. استبدل عملاتك الرقمية بجنيه مصري عبر البنك الأهلي، CIB، فودافون كاش، وإنستاباي بأفضل الأسعار.">
-    <meta name="keywords" content="شراء بيتكوين مصر, بيع تيثر دولار, شراء USDT, بيع عملات رقمية, تيتو كاش, صرافة عملات رقمية, البلوكتشين, إيثيريوم, أفضل أسعار البيتكوين, تداول العملات الرقمية">
+    <meta name="keywords" content="شراء بيتكوين مصر, بيع تيثر دولار, شراء USDT, بيع عملات رقمية, تيتو كاش, صرافة عملات رقمية, البلوكتشين, إيثيريوم, أفضل أسعار البيتكوين, تداول العملات الرقمية, أسعار العملات الرقمية لحظية">
     <meta name="robots" content="index, follow">
     <meta name="author" content="T2 Cash">
 
@@ -36,6 +36,20 @@
         <!-- الشعار -->
         <div class="logo">
             <img src="https://i.ibb.co/x85b221r/1000018025-removebg-preview.png" alt="شعار تيتو كاش">
+        </div>
+
+        <!-- شريط الأسعار اللحظية -->
+        <div class="crypto-ticker">
+            <div class="ticker-wrapper">
+                <div id="ticker-content"></div>
+            </div>
+        </div>
+
+        <!-- شريط إحصائيات السوق -->
+        <div class="market-stats">
+            <span id="market-cap">إجمالي القيمة السوقية: جارٍ التحميل...</span>
+            <span id="total-coins">عدد العملات: جارٍ التحميل...</span>
+            <span id="volume-24h">حجم التداول (24 ساعة): جارٍ التحميل...</span>
         </div>
 
         <!-- قسم الشراء/البيع -->
