--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تيتو كاش: شراء وبيع البيتكوين وتيثر دولار رقمي في مصر</title>
     <meta name="description" content="تيتو كاش - منصتك الأولى لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية في مصر بأمان وسرعة. استبدل عملاتك الرقمية بجنيه مصري عبر إنستاباي ومحفظة بأفضل الأسعار.">
-    <meta name="keywords" content="شراء بيتكوين مصر, بيع تيثر دولار, شراء USDT, بيع عملات رقمية, تيتو كاش, صرافة عملات رقمية, البلوكتشين, إيثيريوم, أفضل أسعار البيتكوين, تداول العملات الرقمية, أسعار العملات الرقمية لحظية, بينانس, كوكوين, او كى اكس, وورلدكوين, يونيسواب, فايلكوين, سوي, ترون, نير, إيوتا, هيدرا, إيثيريوم كلاسيك">
+    <meta name="keywords" content="شراء بيتكوين مصر, بيع تيثر دولار, شراء USDT, بيع عملات رقمية, تيتو كاش, صرافة عملات رقمية, البلوكتشين, إيثيريوم, أفضل أسعار البيتكوين, تداول العملات الرقمية, أسعار العملات الرقمية لحظية, بينانس, كوكوين, او كى اكس, وورلدكوين, يونيسواب, فايلكوين, سوي, ترون, نير, إيوتا, هيدرا, إيثيريوم كلاسيك, دوجكوين, افالانش, شيبا إنو, بوليجون, كوزموس, ستيلر, مونيرو, الجوراند, فيتشين, ابيتوس, اربيتروم, اوبتيميزم, انترنت كمبيوتر, كرونوس">
     <meta name="robots" content="index, follow">
     <meta name="author" content="T2 Cash">
 
@@ -38,6 +38,12 @@
         <!-- الشعار -->
         <div class="logo">
             <img src="https://i.ibb.co/x85b221r/1000018025-removebg-preview.png" alt="شعار تيتو كاش">
+        </div>
+
+        <!-- مستطيل الأسعار -->
+        <div class="price-box">
+            <h2>سعر USDT اليوم (<span id="current-date">5 مايو 2025</span>)</h2>
+            <p>شراء: <span id="buy-price">53</span> جنيه | بيع: <span id="sell-price">50.50</span> جنيه</p>
         </div>
 
         <!-- شريط الأسعار اللحظية -->
