--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تيتو كاش: شراء وبيع البيتكوين وتيثر دولار رقمي في مصر</title>
-    <meta name="description" content="تيتو كاش - منصتك الأولى لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية في مصر بأمان وسرعة. استبدل عملاتك الرقمية بجنيه مصري عبر إنستاباي ومحفظة بأفضل الأسعار.">
-    <meta name="keywords" content="شراء بيتكوين مصر, بيع تيثر دولار, شراء USDT, بيع عملات رقمية, تيتو كاش, صرافة عملات رقمية, البلوكتشين, إيثيريوم, أفضل أسعار البيتكوين, تداول العملات الرقمية, أسعار العملات الرقمية لحظية, بينانس, كوكوين, او كى اكس, وورلدكوين, يونيسواب, فايلكوين, سوي, ترون, نير, إيوتا, هيدرا, إيثيريوم كلاسيك, دوجكوين, افالانش, شيبا إنو, بوليجون, كوزموس, ستيلر, مونيرو, الجوراند, فيتشين, ابيتوس, اربيتروم, اوبتيميزم, انترنت كمبيوتر, كرونوس">
+    <title> تيتو كاش: شراء وبيع دولار رقمي  </title>
+    <meta name="description" content="تيتو كاش - منصتك الأولى لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية في بأمان وسرعة. استبدل عملاتك الرقمية بجنيه مصري عبر إنستاباي ومحفظة بأفضل الأسعار.">
+    <meta name="keywords" content="شراء بيتكوين , بيع تيثر دولار, شراء USDT, بيع عملات رقمية, تيتو كاش, صرافة عملات رقمية, البلوكتشين, إيثيريوم, أفضل أسعار البيتكوين, تداول العملات الرقمية, أسعار العملات الرقمية لحظية, بينانس, كوكوين, او كى اكس, وورلدكوين, يونيسواب, فايلكوين, سوي, ترون, نير, إيوتا, هيدرا, إيثيريوم كلاسيك, دوجكوين, افالانش, شيبا إنو, بوليجون, كوزموس, ستيلر, مونيرو, الجوراند, فيتشين, ابيتوس, اربيتروم, اوبتيميزم, انترنت كمبيوتر, كرونوس">
     <meta name="robots" content="index, follow">
     <meta name="author" content="T2 Cash">
 
