--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="author" content="T2 Cash">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="تيتو كاش: شراء وبيع البيتكوين وتيثر دولار في مصر">
-    <meta property="og:description" content="منصة تيتو كاش لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية بسهولة وأمان في مصر. استبدل عملاتك الآن بأفضل الأسعار!">
+    <meta property="og:title" content="تيتو كاش: شراء وبيع الدولار الرقمى ">
+    <meta property="og:description" content=" منصة تيتو كاش لشراء وبيع الدولار الرقمى (USDT) والعملات الرقمية بسهولة وأمان في مصر. استبدل عملاتك الآن بأفضل الأسعار!">
     <meta property="og:image" content="https://i.ibb.co/x85b221r/1000018025-removebg-preview.png">
     <meta property="og:url" content="https://t2digital.github.io/T2Cash/">
     <meta property="og:type" content="website">
@@ -19,8 +19,8 @@
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="تيتو كاش: شراء وبيع البيتكوين وتيثر دولار في مصر">
-    <meta name="twitter:description" content="منصة تيتو كاش لشراء وبيع البيتكوين وتيثر دولار (USDT) والعملات الرقمية بسهولة وأمان في مصر.">
+    <meta name="twitter:title" content=" تيتو كاش: شراء وبيع الدولار الرقمى ">
+    <meta name="twitter:description" content="منصة تيتو كاش لشراء الدولار الرقمى (USDT) والعملات الرقمية بسهولة وأمان في مصر.">
     <meta name="twitter:image" content="https://i.ibb.co/x85b221r/1000018025-removebg-preview.png">
 
     <link rel="stylesheet" href="styles.css">
@@ -62,7 +62,7 @@
 
         <!-- قسم الشراء/البيع -->
         <section class="calculator-section">
-            <h1>تيتو كاش: شراء وبيع البيتكوين وتيثر دولار رقمي</h1>
+            <h1> تيتو كاش: شراء وبيع الدولار الرقمي </h1>
             <div class="toggle">
                 <button class="toggle-btn active" onclick="setMode('buy')">شراء USDT</button>
                 <button class="toggle-btn" onclick="setMode('sell')">بيع USDT</button>
